--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -48,6 +48,8 @@
 	"*Please enter a valid password (minimum length = 8 characters)": "*يرجى إدخال كلمة المرور  (اقل  8 حروف)",
 	"*Please enter chapter Title": "*يرجى إدخال عنوان الفصل",
 	"*Please enter description": "*يرجى إدخال الوصف",
+	"*Please enter first name": "*Please enter first name",
+	"*Please enter last name": "*Please enter last name",
 	"*Please enter price": "*يرجى إدخال السعر",
 	"*Please enter sort (1-100)": "*يرجى إدخال رقم الترتيب (1-100)",
 	"*Please select a course": "*يرجى اختيار الكورس",
@@ -315,6 +317,8 @@
 	"Price": "السعر",
 	"Privacy Policy": "سياسة الخصوصية",
 	"Process Faild ": "Process Faild ",
+	"Profile Updated Successfully": "Profile Updated Successfully",
+	"Profile not Updated, please try again": "Profile not Updated, please try again",
 	"Promotional Video": "الفيديو الدعائى",
 	"Psychology": "علم نفس",
 	"Purchase History": "Purchase History",
@@ -333,6 +337,7 @@
 	"Reset link Sent, Please Check Your mail": "تم إرسال ايميل  تغيير كلمة المرور, يرجى تفقد البريد الإلكتروني",
 	"Restricted Users": "Restricted Users",
 	"Restricted users": "Restricted users",
+	"Save Changes": "Save Changes",
 	"Save Chapter": "حفظ الفصل ",
 	"Save Lecture": "حفظ المحاضره",
 	"Science": "جولوجيا",
