--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -48,6 +48,8 @@
 	"*Please enter a valid password (minimum length = 8 characters)": "*Please enter a valid password (minimum length = 8 characters)",
 	"*Please enter chapter Title": "*Please enter chapter Title",
 	"*Please enter description": "*Please enter description",
+	"*Please enter first name": "*Please enter first name",
+	"*Please enter last name": "*Please enter last name",
 	"*Please enter price": "*Please enter price",
 	"*Please enter sort (1-100)": "*Please enter sort (1-100)",
 	"*Please select a course": "*Please select a course",
@@ -315,6 +317,8 @@
 	"Price": "Price",
 	"Privacy Policy": "Privacy Policy",
 	"Process Faild ": "Process Faild ",
+	"Profile Updated Successfully": "Profile Updated Successfully",
+	"Profile not Updated, please try again": "Profile not Updated, please try again",
 	"Promotional Video": "Promotional Video",
 	"Psychology": "Psychology",
 	"Purchase History": "Purchase History",
@@ -333,6 +337,7 @@
 	"Reset link Sent, Please Check Your mail": "Reset link Sent, Please Check Your mail",
 	"Restricted Users": "Restricted Users",
 	"Restricted users": "Restricted users",
+	"Save Changes": "Save Changes",
 	"Save Chapter": "Save Chapter",
 	"Save Lecture": "Save Lecture",
 	"Science": "Science",
