--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -154,6 +154,7 @@
 	"Create Chapter": "إنشاء فصل",
 	"Create Lecture": "إنشاء محاضرة",
 	"Create New Course": "أنشئ كورس جديد",
+	"Create New Quiz": "Create New Quiz",
 	"Dashboard": "واجهة العرض",
 	"Date": "Date",
 	"Date from": "Date from",
@@ -353,6 +354,7 @@
 	"Select Language": "إختر اللغة",
 	"Select Payment Method": "Select Payment Method",
 	"Select Subjects": "إختر المواد",
+	"Select course": "Select course",
 	"Select screenshots to upload": "Select screenshots to upload",
 	"Select status": "Select status",
 	"Select the instructor": "Select the instructor",
@@ -369,6 +371,7 @@
 		"": "نأسف ل انتهاء مدة   العرض لهذا الرابط, يرجى التواصل مع  المسؤل."
 	},
 	"Sort": "الترتيب",
+	"Start add questions": "Start add questions",
 	"Status": "الحالة",
 	"Student Dashboard": "لوحة العرض",
 	"Student Name": "اسم الطالب",
@@ -439,12 +442,14 @@
 	"create Date": "تاريخ الإنشاء",
 	"deactivated Successfully": "deactivated Successfully",
 	"delete enrollment request": "delete enrollment request",
+	"description": "description",
 	"email": "الإيميل",
 	"example: Elkashef": "مثال : محمود",
 	"example: Hossam": " مثال : محمد",
 	"fee": "الرسوم",
 	"first": "first",
 	"first Name": "الإسم الأول",
+	"instructions": "instructions",
 	"instructor Name*": "instructor Name*",
 	"instructor mobile number:": "رقم محمول المحاضر:",
 	"instructor name:": "اسم المحاضر:",
@@ -464,6 +469,7 @@
 	"november": "november",
 	"october": "october",
 	"or drag and drop screenshots": "or drag and drop screenshots",
+	"pass score %": "pass score %",
 	"password": "كلمة المرور",
 	"password doesn't match": "كلمة المرور غير متطابقة",
 	"phone number": "رقم الموبايل",
@@ -472,6 +478,8 @@
 	"please try again": "please try again",
 	"please try again!": "please try again!",
 	"purchase history": "purchase history",
+	"questions": "questions",
+	"quiz information": "quiz information",
 	"sign Up": "الإشتراك",
 	"sort": "الترتيب",
 	"sort ": "الترتيب ",
@@ -479,7 +487,9 @@
 	"student name:": "اسم الطالب:",
 	"this chapter contains lectures, can't be deleted": "يحتوى هذا الفصل على محاضرات,لا يمكن حذفه",
 	"this course contains chapters, can't be deleted": "يحتوى هذا الكورس على فصول , لا يمكن حذفه",
+	"time (minuets)": "time (minuets)",
 	"time m": "الوقت د ",
+	"title": "title",
 	"unblocked Successfully": "unblocked Successfully",
 	"user email:": "user email:",
 	"user ip:": "user ip:",
