--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -154,6 +154,7 @@
 	"Create Chapter": "Create Chapter",
 	"Create Lecture": "Create Lecture",
 	"Create New Course": "Create New Course",
+	"Create New Quiz": "Create New Quiz",
 	"Dashboard": "Dashboard",
 	"Date": "Date",
 	"Date from": "Date from",
@@ -353,6 +354,7 @@
 	"Select Language": "Select Language",
 	"Select Payment Method": "Select Payment Method",
 	"Select Subjects": "Select Subjects",
+	"Select course": "Select course",
 	"Select screenshots to upload": "Select screenshots to upload",
 	"Select status": "Select status",
 	"Select the instructor": "Select the instructor",
@@ -369,6 +371,7 @@
 		"": "Sorry your link is expired, please contact the administrator."
 	},
 	"Sort": "Sort",
+	"Start add questions": "Start add questions",
 	"Status": "Status",
 	"Student Dashboard": "Student Dashboard",
 	"Student Name": "Student Name",
@@ -439,12 +442,14 @@
 	"create Date": "Create Date",
 	"deactivated Successfully": "deactivated Successfully",
 	"delete enrollment request": "delete enrollment request",
+	"description": "description",
 	"email": "Email",
 	"example: Elkashef": "example: Elkashef",
 	"example: Hossam": "example: Hossam",
 	"fee": "Fee",
 	"first": "first",
 	"first Name": "First Name",
+	"instructions": "instructions",
 	"instructor Name*": "instructor Name*",
 	"instructor mobile number:": "Instructor Mobile Number:",
 	"instructor name:": "Instructor Name:",
@@ -464,6 +469,7 @@
 	"november": "november",
 	"october": "october",
 	"or drag and drop screenshots": "or drag and drop screenshots",
+	"pass score %": "pass score %",
 	"password": "Password",
 	"password doesn't match": "Password doesn't match",
 	"phone number": "Phone Number",
@@ -472,6 +478,8 @@
 	"please try again": "please try again",
 	"please try again!": "please try again!",
 	"purchase history": "purchase history",
+	"questions": "questions",
+	"quiz information": "quiz information",
 	"sign Up": "Sign Up",
 	"sort": "Sort",
 	"sort ": "Sort ",
@@ -479,7 +487,9 @@
 	"student name:": "Student Name:",
 	"this chapter contains lectures, can't be deleted": "This chapter contains lectures, can't be deleted",
 	"this course contains chapters, can't be deleted": "This course contains chapters, can't be deleted",
+	"time (minuets)": "time (minuets)",
 	"time m": "Time m",
+	"title": "title",
 	"unblocked Successfully": "unblocked Successfully",
 	"user email:": "user email:",
 	"user ip:": "user ip:",
