addquestions anstructor -completed

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -80,7 +80,10 @@
 	"Add New Chapter": "أضف فصل جديد",
 	"Add New Course": "اضف كورس جديد",
 	"Add New Lecture": "إضافة محاضره جديده",
+	"Add New Question": "Add New Question",
 	"Add Screenshots": "Add Screenshots",
+	"Add new answer": "Add new answer",
+	"Add question Image": "Add question Image",
 	"Add to Cart": "إضافة للسلة",
 	"Added to cart": "إضافة للسلة",
 	"Address": "Address",
@@ -273,12 +276,14 @@
 	"Management Users": "Management Users",
 	"Managment users": "Managment users",
 	"March": "March",
+	"Mark as correct": "Mark as correct",
 	"Match your goals to our classes, explore your options, and map out your path to success": {
 		"": "اكشتف اهدافك وابدا طريق النجاح"
 	},
 	"Math": "الرياضيات",
 	"May": "May",
 	"Menu": "القائمة",
+	"Minimum number of answers = 2": "Minimum number of answers = 2",
 	"Minutes": "الدقائق",
 	"Mobile": "Mobile",
 	"Mobile Number": "Mobile Number",
@@ -309,6 +314,8 @@
 	"Please Confirm?": "يرجى التاكيد ؟",
 	"Please Don't use IDM Extension to be able to use this website": "Please Don't use IDM Extension to be able to use this website",
 	"Please Try Again": "Please Try Again",
+	"Please complete the current question to add new one": "Please complete the current question to add new one",
+	"Please complete/check your quiz again": "Please complete/check your quiz again",
 	"Please enter a valid mobile number or email": "يرجى إدخال رقم موبايل صحيح او ايميل صحيح",
 	"Please make sure your are entered a valid Email or Mobile, password, and Checked the reCaptcha box": "يرجى التاكد من البريد الإلكتروني أورقم الموبايل والصور المطلوبه  للتحقق",
 	"Please select a lecture": "يرجى اختيار محاضرة",
@@ -324,6 +331,7 @@
 	"Psychology": "علم نفس",
 	"Purchase History": "Purchase History",
 	"Purchase history": "Purchase history",
+	"Question": "Question",
 	"Refresh table": "تجديد الجدول",
 	"Reject": "ايقاف",
 	"Rejected": "متوقف",
