--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -80,7 +80,10 @@
 	"Add New Chapter": "Add New Chapter",
 	"Add New Course": "Add New Course",
 	"Add New Lecture": "Add New Lecture",
+	"Add New Question": "Add New Question",
 	"Add Screenshots": "Add Screenshots",
+	"Add new answer": "Add new answer",
+	"Add question Image": "Add question Image",
 	"Add to Cart": "Add to Cart",
 	"Added to cart": "Added to cart",
 	"Address": "Address",
@@ -273,12 +276,14 @@
 	"Management Users": "Management Users",
 	"Managment users": "Managment users",
 	"March": "March",
+	"Mark as correct": "Mark as correct",
 	"Match your goals to our classes, explore your options, and map out your path to success": {
 		"": "Match your goals to our classes, explore your options, and map out your path to success."
 	},
 	"Math": "Math",
 	"May": "May",
 	"Menu": "Menu",
+	"Minimum number of answers = 2": "Minimum number of answers = 2",
 	"Minutes": "Minutes",
 	"Mobile": "Mobile",
 	"Mobile Number": "Mobile Number",
@@ -309,6 +314,8 @@
 	"Please Confirm?": "Please Confirm?",
 	"Please Don't use IDM Extension to be able to use this website": "Please Don't use IDM Extension to be able to use this website",
 	"Please Try Again": "Please Try Again",
+	"Please complete the current question to add new one": "Please complete the current question to add new one",
+	"Please complete/check your quiz again": "Please complete/check your quiz again",
 	"Please enter a valid mobile number or email": "Please enter a valid mobile number or email",
 	"Please make sure your are entered a valid Email or Mobile, password, and Checked the reCaptcha box": "Please make sure your are entered a valid Email or Mobile, password, and Checked the reCaptcha box",
 	"Please select a lecture": "Please select a lecture",
@@ -324,6 +331,7 @@
 	"Psychology": "Psychology",
 	"Purchase History": "Purchase History",
 	"Purchase history": "Purchase history",
+	"Question": "Question",
 	"Refresh table": "Refresh table",
 	"Reject": "Reject",
 	"Rejected": "Rejected",
