addquestions anstructor -completed

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -80,7 +80,6 @@
 	"Add New Chapter": "أضف فصل جديد",
 	"Add New Course": "اضف كورس جديد",
 	"Add New Lecture": "إضافة محاضره جديده",
-	"Add New Question": "Add New Question",
 	"Add Screenshots": "Add Screenshots",
 	"Add new answer": "Add new answer",
 	"Add question Image": "Add question Image",
@@ -158,6 +157,7 @@
 	"Create Lecture": "إنشاء محاضرة",
 	"Create New Course": "أنشئ كورس جديد",
 	"Create New Quiz": "Create New Quiz",
+	"Create quiz and start add questions": "Create quiz and start add questions",
 	"Dashboard": "واجهة العرض",
 	"Date": "Date",
 	"Date from": "Date from",
@@ -188,9 +188,16 @@
 	"Enter First Name": "Enter First Name",
 	"Enter Last Name": "Enter Last Name",
 	"Enter Mobile Number": "Enter Mobile Number",
+	"Error creating new quiz": "Error creating new quiz",
+	"Error creating save question, try again": "Error creating save question, try again",
+	"Error remove question, try again": "Error remove question, try again",
+	"Error remove the answer, try again": "Error remove the answer, try again",
+	"Error save answer image, try again": "Error save answer image, try again",
+	"Error save question image, try again": "Error save question image, try again",
 	"Error while creating chapter, please try again": "حدث خطأ خلال الأنشاء , يرجى المحاولة مرة أخرى",
 	"Error while creating course, please try again": "حدث خطأ خلال إنشاء الكورس, يرجى المحاولة مرة اخرى",
 	"Error while creating lecture, please try again": "خدث خطأ خلال إنشاء المحاضرة , يرجى المحاولة مرة اخرى",
+	"Error while publish your qui, try again": "Error while publish your qui, try again",
 	"Error while submitting your order, please try again": "حدث خطأ خلال تاكيد الطلب , يرجى المحاولة مرى اخرى",
 	"Error while update chapter, please try again": "حدث خطأ خلال تعديل الفصل , يرجى المحاولة مرة اخرى",
 	"Error while update course, please try again": "حدث خطأ خلال تعديل الكورس ,يرجى المحاولة مرة اخرى",
@@ -329,6 +336,7 @@
 	"Profile not Updated, please try again": "Profile not Updated, please try again",
 	"Promotional Video": "الفيديو الدعائى",
 	"Psychology": "علم نفس",
+	"Published": "Published",
 	"Purchase History": "Purchase History",
 	"Purchase history": "Purchase history",
 	"Question": "Question",
@@ -349,6 +357,7 @@
 	"Save Changes": "Save Changes",
 	"Save Chapter": "حفظ الفصل ",
 	"Save Lecture": "حفظ المحاضره",
+	"Save this question and Add new one": "Save this question and Add new one",
 	"Science": "جولوجيا",
 	"Search": "البحث",
 	"Search By": "Search By",
@@ -362,7 +371,6 @@
 	"Select Language": "إختر اللغة",
 	"Select Payment Method": "Select Payment Method",
 	"Select Subjects": "إختر المواد",
-	"Select course": "Select course",
 	"Select screenshots to upload": "Select screenshots to upload",
 	"Select status": "Select status",
 	"Select the instructor": "Select the instructor",
@@ -379,7 +387,6 @@
 		"": "نأسف ل انتهاء مدة   العرض لهذا الرابط, يرجى التواصل مع  المسؤل."
 	},
 	"Sort": "الترتيب",
-	"Start add questions": "Start add questions",
 	"Status": "الحالة",
 	"Student Dashboard": "لوحة العرض",
 	"Student Name": "اسم الطالب",
@@ -485,6 +492,7 @@
 	"please enter a valid password, min 8 characters": "   من فضلك ادخل كلمة مرور صحيحة ,اقل عدد  8حروف ",
 	"please try again": "please try again",
 	"please try again!": "please try again!",
+	"publish the quiz": "publish the quiz",
 	"purchase history": "purchase history",
 	"questions": "questions",
 	"quiz information": "quiz information",
