--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -80,7 +80,6 @@
 	"Add New Chapter": "Add New Chapter",
 	"Add New Course": "Add New Course",
 	"Add New Lecture": "Add New Lecture",
-	"Add New Question": "Add New Question",
 	"Add Screenshots": "Add Screenshots",
 	"Add new answer": "Add new answer",
 	"Add question Image": "Add question Image",
@@ -158,6 +157,7 @@
 	"Create Lecture": "Create Lecture",
 	"Create New Course": "Create New Course",
 	"Create New Quiz": "Create New Quiz",
+	"Create quiz and start add questions": "Create quiz and start add questions",
 	"Dashboard": "Dashboard",
 	"Date": "Date",
 	"Date from": "Date from",
@@ -188,9 +188,16 @@
 	"Enter First Name": "Enter First Name",
 	"Enter Last Name": "Enter Last Name",
 	"Enter Mobile Number": "Enter Mobile Number",
+	"Error creating new quiz": "Error creating new quiz",
+	"Error creating save question, try again": "Error creating save question, try again",
+	"Error remove question, try again": "Error remove question, try again",
+	"Error remove the answer, try again": "Error remove the answer, try again",
+	"Error save answer image, try again": "Error save answer image, try again",
+	"Error save question image, try again": "Error save question image, try again",
 	"Error while creating chapter, please try again": "Error while creating chapter, please try again",
 	"Error while creating course, please try again": "Error while creating course, please try again",
 	"Error while creating lecture, please try again": "Error while creating lecture, please try again",
+	"Error while publish your qui, try again": "Error while publish your qui, try again",
 	"Error while submitting your order, please try again": "Error while submitting your order, please try again",
 	"Error while update chapter, please try again": "Error while update chapter, please try again",
 	"Error while update course, please try again": "Error while update course, please try again",
@@ -329,6 +336,7 @@
 	"Profile not Updated, please try again": "Profile not Updated, please try again",
 	"Promotional Video": "Promotional Video",
 	"Psychology": "Psychology",
+	"Published": "Published",
 	"Purchase History": "Purchase History",
 	"Purchase history": "Purchase history",
 	"Question": "Question",
@@ -349,6 +357,7 @@
 	"Save Changes": "Save Changes",
 	"Save Chapter": "Save Chapter",
 	"Save Lecture": "Save Lecture",
+	"Save this question and Add new one": "Save this question and Add new one",
 	"Science": "Science",
 	"Search": "Search",
 	"Search By": "Search By",
@@ -362,7 +371,6 @@
 	"Select Language": "Select Language",
 	"Select Payment Method": "Select Payment Method",
 	"Select Subjects": "Select Subjects",
-	"Select course": "Select course",
 	"Select screenshots to upload": "Select screenshots to upload",
 	"Select status": "Select status",
 	"Select the instructor": "Select the instructor",
@@ -379,7 +387,6 @@
 		"": "Sorry your link is expired, please contact the administrator."
 	},
 	"Sort": "Sort",
-	"Start add questions": "Start add questions",
 	"Status": "Status",
 	"Student Dashboard": "Student Dashboard",
 	"Student Name": "Student Name",
@@ -485,6 +492,7 @@
 	"please enter a valid password, min 8 characters": "Please enter a valid password, min 8 characters",
 	"please try again": "please try again",
 	"please try again!": "please try again!",
+	"publish the quiz": "publish the quiz",
 	"purchase history": "purchase history",
 	"questions": "questions",
 	"quiz information": "quiz information",
